Add displaying buff queue
