# src/api_gen/types/ObservableAPI.ts
@@ -457,6 +457,37 @@ export class ObservableChannelsApi {
         return this.channelsControllerCreateWithHttpInfo(createChannelDto, _options).pipe(map((apiResponse: HttpInfo<Channel>) => apiResponse.data));
     }
 
+    /**
+     * @param guildUid
+     * @param type
+     */
+    public channelsControllerFindOneWithHttpInfo(guildUid: string, type: 'construction' | 'research' | 'training', _options?: Configuration): Observable<HttpInfo<Channel>> {
+        const requestContextPromise = this.requestFactory.channelsControllerFindOne(guildUid, type, _options);
+
+        // build promise chain
+        let middlewarePreObservable = from<RequestContext>(requestContextPromise);
+        for (const middleware of this.configuration.middleware) {
+            middlewarePreObservable = middlewarePreObservable.pipe(mergeMap((ctx: RequestContext) => middleware.pre(ctx)));
+        }
+
+        return middlewarePreObservable.pipe(mergeMap((ctx: RequestContext) => this.configuration.httpApi.send(ctx))).
+            pipe(mergeMap((response: ResponseContext) => {
+                let middlewarePostObservable = of(response);
+                for (const middleware of this.configuration.middleware) {
+                    middlewarePostObservable = middlewarePostObservable.pipe(mergeMap((rsp: ResponseContext) => middleware.post(rsp)));
+                }
+                return middlewarePostObservable.pipe(map((rsp: ResponseContext) => this.responseProcessor.channelsControllerFindOneWithHttpInfo(rsp)));
+            }));
+    }
+
+    /**
+     * @param guildUid
+     * @param type
+     */
+    public channelsControllerFindOne(guildUid: string, type: 'construction' | 'research' | 'training', _options?: Configuration): Observable<Channel> {
+        return this.channelsControllerFindOneWithHttpInfo(guildUid, type, _options).pipe(map((apiResponse: HttpInfo<Channel>) => apiResponse.data));
+    }
+
 }
 
 import { FilesApiRequestFactory, FilesApiResponseProcessor} from "../apis/FilesApi";
